scroll down design and scrollbar fix

--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -25,14 +25,6 @@ body {
   margin: 0;
 }
 
-.big-title {
-  font-family: Lato;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 64px;
-  line-height: 100%;
-}
-
 h1 {
   font-family: Lato;
   font-style: normal;
@@ -97,6 +89,13 @@ h5 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.centered-x {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
 }
 
 ul {
